--- a/openday_scavenger/static/html/layout.html
+++ b/openday_scavenger/static/html/layout.html
@@ -1,6 +1,9 @@
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <script src="/static/js/htmx.min.js"></script>
     <script src="/static/js/json-enc.js"></script>
     <script src="/static/js/bootstrap.bundle.min.js"></script>
