--- a/openday_scavenger/puzzles/ant/static/index.html
+++ b/openday_scavenger/puzzles/ant/static/index.html
@@ -1,5 +1,8 @@
+<!doctype html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
         
