add basic linting to HTML templates

--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <title>ADS Question Answer Matchup Puzzle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
@@ -50,7 +52,7 @@
                     <div class="list-group-item tinted list-row" id="data4">150</div>
                     <div class="list-group-item tinted list-row" id="data1">300</div>
                     <div class="finger-container">
-                        <img src="static/img/tap.png" class="finger" />
+                        <img src="static/img/tap.png" class="finger" alt="image indicating that items should be dragged with finger" />
                     </div>
                 </div>
             </div>
