--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -1,7 +1,8 @@
-<html>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <title>X-ray Filter Puzzle</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="/static/js/htmx.min.js"></script>
         <script src="/static/js/json-enc.js"></script>
 
@@ -107,8 +108,6 @@
                 <img src="static/beam_post_filter.png" alt="Beam2 post filter" class="beam2">
                 <img src="static/filters/ni_filter_02mm.png" alt="Filter1" class="filter-image filter1">
                 <img src="static/beam_post_filter.png" alt="Beam1 post filter" class="beam1">
-
-
             </div>
 
         <h3 id="output">Target attenuation: 0%</h3>
