--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <title>Demo Puzzle</title>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="/static/js/htmx.min.js"></script>
