--- a/openday_scavenger/puzzles/ant/static/index.html
+++ b/openday_scavenger/puzzles/ant/static/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
+        <title>Ant</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="/static/js/htmx.min.js"></script>
