--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -1,42 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="/static/js/htmx.min.js"></script>
-<script src="/static/js/json-enc.js"></script>
-<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-<link href="/static/css/fontawesome.min.css" rel="stylesheet" />
-<link href="/static/css/solid.min.css" rel="stylesheet" />
-<link href="static/demo.css" rel="stylesheet">
-<link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Image Reveal Puzzle</title>
+
+    <script src="/static/js/htmx.min.js"></script>
+    <script src="/static/js/json-enc.js"></script>
+
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/openday.css" rel="stylesheet" />
+
+    <link id="favicon" rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="title">X-ray Fluorescence Microscopy (XFM) Images Puzzle</h1>
+    <div class="container my-3">
+        <h1 class="type-h1 text-center">X-ray Fluorescence Microscopy (XFM) Images Puzzle</h1>
 
-        <div class="instructions">
+        <div class="mt-3 text-center">
             <p>XFM produces elemental maps, where each colour component (Red, Green, Blue) represents a different atomic
                 element.
             <p>Here are four animals scanned at the XFM beamline. Can you identify them as we reveal their image maps?
             </p>
-
         </div>
 
         {% if state['complete'] == false %}
-        <form id='form' class="form" method='POST' action='/puzzles/imagereveal/partsubmission'>
+        <form id='form' class="d-flex flex-column text-center justify-content-center" method='POST'
+            action='/puzzles/imagereveal/partsubmission'>
             <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
 
-            <label for="form">Animal {{ state["animal_id"] }}:</label>
-            <label for="form">Correct guesses {{ state["correct_guesses"] }}:</label>
-            <label for="form">Remaining guesses {{ state["remaining_guesses"] }}:</label>
-
-
+            <p>
+                <span class="text-secondary fw-bold">Animal #{{ state["animal_id"] }}</span><br />
+                Correct guesses: <b>{{ state["correct_guesses"] }}</b>
+                <br />
+                Remaining guesses: <b>{{ state["remaining_guesses"] }}</b>
+            </p>
 
             <!-- {% if state["remaining_guesses"] %} -->
 
             <img src="static/im{{ state['animal_id'] }}_{{ state['fraction'] }}.jpg"
-                alt="Animal {{ state['animal_id'] }}" style="width:80%"><br>
+                alt="Animal {{ state['animal_id'] }}" style="max-width: 800px; width:100%" class="my-3 mx-auto">
 
             <!-- {% else %} -->
 
@@ -57,16 +64,16 @@
                     Submit your guess
                 </button> -->
             <input type="hidden" id="animal" name="animal" value="">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <button type="button" class="form-button col-4" id="0" onclick="submitForm(0)">Wasp</button>
-                    <button type="button" class="form-button col-4" id="1" onclick="submitForm(1)">Millipede</button>
-                    <button type="button" class="form-button col-4" id="2" onclick="submitForm(2)">Mosquito</button>
-                    <button type="button" class="form-button col-4" id="3" onclick="submitForm(3)">Giraffe</button>
-                    <button type="button" class="form-button col-4" id="4" onclick="submitForm(4)">Lobster
-                        larva</button>
-                    <button type="button" class="form-button col-4" id="5" onclick="submitForm(5)">Ant</button>
-                </div>
+
+            <div>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="0" onclick="submitForm(0)">Wasp</button>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="1"
+                    onclick="submitForm(1)">Millipede</button>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="2" onclick="submitForm(2)">Mosquito</button>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="3" onclick="submitForm(3)">Giraffe</button>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="4" onclick="submitForm(4)">Lobster
+                    larva</button>
+                <button type="button" class="btn btn-secondary m-2 p-3" id="5" onclick="submitForm(5)">Ant</button>
             </div>
         </form>
 
