--- a/openday_scavenger/puzzles/controls_game/static/index.html
+++ b/openday_scavenger/puzzles/controls_game/static/index.html
@@ -21,11 +21,8 @@
     <div class="container text-center my-3">
         <h1 class="type-h1">Controls Puzzle Game</h1>
         <div class="mt-5">
-            <p class="text-secondary fw-bold">Updating your status...</p>
-            <div class="spinner-border text-primary" role="presentation">
-
-                <span class="sr-only">Loading...</span>
-            </div>
+            <p class="text-secondary fw-bold">Submitting results...</p>
+            <div class="spinner-border text-primary" role="presentation"></div>
         </div>
 
         <form id="form" action="/submission" method="POST" class="invisible">
