Increase gap at bottom of screen so it's easier to tap on phone

--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -45,7 +45,7 @@
 
             <input type="hidden" id="animal" name="animal" value="">
 
-            <div>
+            <div class="mb-5">
                 <button type="button" class="btn btn-secondary m-2 p-3" id="0" onclick="submitForm(0)">Wasp</button>
                 <button type="button" class="btn btn-secondary m-2 p-3" id="1"
                     onclick="submitForm(1)">Millipede</button>
