Show users how many questions in total in case they didn't read the previous paragraph

--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -34,7 +34,8 @@
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
 
             <p>
-                <span class="text-secondary fw-bold">Animal #{{ state["animal_id"] }}</span><br />
+                <span class="text-secondary fw-bold">Animal # {{ state["animal_id"] }} / 4</span>
+                <br />
                 Correct guesses: <b>{{ state["correct_guesses"] }}</b>
                 <br />
                 Remaining guesses: <b>{{ state["remaining_guesses"] }}</b>
