--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -41,22 +41,65 @@
                 Remaining guesses: <b>{{ state["remaining_guesses"] }}</b>
             </p>
 
-            <img src="static/im{{ state['animal_id'] }}_{{ state['fraction'] }}.jpg"
-                alt="Animal {{ state['animal_id'] }}" style="max-width: 800px; width:100%" class="my-3 mx-auto">
+            {% if state["reveal"] > 0 %}
+            <div id="content-reveal">
+                <div class="position-relative">
+                    {% for index in [9, 7, 5, 3, 1] %}
+                    <img src="static/im{{ state['reveal'] }}_{{ index }}.jpg" alt="Animal {{ state['reveal'] }}"
+                        style="max-width: 800px; width:100%; top: 50%; left: 50%; transform: translateX(-50%) translateY(-50%);"
+                        class="position-absolute" id="reveal-{{index}}">
+                    {% endfor %}
+                    <img src="static/im{{ state['reveal'] }}_10.jpg" alt="Animal {{ state['reveal'] }}"
+                        style="max-width: 800px; width:100%;">
+                </div>
 
-            <input type="hidden" id="animal" name="animal" value="">
+                <button type="button" class="btn btn-primary mt-3 mb-5 p-3" onclick="nextQuestion()">Next
+                    Animal</button>
+            </div>
 
-            <div class="mb-5">
-                <button type="button" class="btn btn-secondary m-2 p-3" id="0" onclick="submitForm(0)">Wasp</button>
-                <button type="button" class="btn btn-secondary m-2 p-3" id="1"
-                    onclick="submitForm(1)">Millipede</button>
-                <button type="button" class="btn btn-secondary m-2 p-3" id="2" onclick="submitForm(2)">Mosquito</button>
-                <button type="button" class="btn btn-secondary m-2 p-3" id="3" onclick="submitForm(3)">Giraffe</button>
-                <button type="button" class="btn btn-secondary m-2 p-3" id="4" onclick="submitForm(4)">Lobster
-                    larva</button>
-                <button type="button" class="btn btn-secondary m-2 p-3" id="5" onclick="submitForm(5)">Ant</button>
+            {% endif %}
+
+            <div id="content-question" class="{% if state['reveal'] > 0 %}d-none{% endif %}">
+                <img src="static/im{{ state['animal_id'] }}_{{ state['fraction'] }}.jpg"
+                    alt="Animal {{ state['animal_id'] }}" style="max-width: 800px; width:100%" class="my-3 mx-auto">
+
+                <input type="hidden" id="animal" name="animal" value="">
+
+                <div class="mb-5">
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="0" onclick="submitForm(0)">Wasp</button>
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="1"
+                        onclick="submitForm(1)">Millipede</button>
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="2"
+                        onclick="submitForm(2)">Mosquito</button>
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="3"
+                        onclick="submitForm(3)">Giraffe</button>
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="4" onclick="submitForm(4)">Lobster
+                        larva</button>
+                    <button type="button" class="btn btn-secondary m-2 p-3" id="5" onclick="submitForm(5)">Ant</button>
+                </div>
             </div>
         </form>
+        <script>
+            function submitForm(animalId) {
+                document.getElementById('animal').value = animalId;
+                document.getElementById('form').submit();
+            }
+
+            function nextQuestion() {
+                document.getElementById('content-reveal').remove();
+                document.getElementById('content-question').classList.remove('d-none');
+            }
+
+            document.addEventListener('DOMContentLoaded', function () {
+                if (!document.getElementById(`content-reveal`)) return;
+
+                [1, 3, 5, 7, 9].forEach((mask, i) => {
+                    setTimeout(function () {
+                        document.getElementById(`reveal-${mask}`).remove();
+                    }, (i + 1) * 500);
+                });
+            });
+        </script>
 
         {% else %}
 
@@ -76,13 +119,6 @@
             }, 1000); // 1 second delay
         </script>
         {% endif %}
-
-        <script>
-            function submitForm(animalId) {
-                document.getElementById('animal').value = animalId;
-                document.getElementById('form').submit();
-            }
-        </script>
     </div>
 
 </body>
