--- a/openday_scavenger/puzzles/imagereveal/static/index.html
+++ b/openday_scavenger/puzzles/imagereveal/static/index.html
@@ -34,7 +34,15 @@
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
 
             <p>
-                <span class="text-secondary fw-bold">Animal # {{ state["animal_id"] }} / 4</span>
+                <span class="text-secondary fw-bold">
+                    Animal #
+                    {% if state["reveal"] > 0 %}
+                    <span id="display_id-reveal">{{ state["reveal"] }}</span>
+                    {% endif %}
+                    <span id="display_id-question" class="{% if state['reveal'] > 0 %}d-none{% endif %}"> {{
+                        state["animal_id"] }} </span>
+                    / 4
+                </span>
                 <br />
                 Correct guesses: <b>{{ state["correct_guesses"] }}</b>
                 <br />
@@ -79,27 +87,6 @@
                 </div>
             </div>
         </form>
-        <script>
-            function submitForm(animalId) {
-                document.getElementById('animal').value = animalId;
-                document.getElementById('form').submit();
-            }
-
-            function nextQuestion() {
-                document.getElementById('content-reveal').remove();
-                document.getElementById('content-question').classList.remove('d-none');
-            }
-
-            document.addEventListener('DOMContentLoaded', function () {
-                if (!document.getElementById(`content-reveal`)) return;
-
-                [1, 3, 5, 7, 9].forEach((mask, i) => {
-                    setTimeout(function () {
-                        document.getElementById(`reveal-${mask}`).remove();
-                    }, (i + 1) * 500);
-                });
-            });
-        </script>
 
         {% else %}
 
@@ -108,19 +95,59 @@
             <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
             <input hidden type="text" id="answer" name="answer" value="{{ state['answer'] }}">
 
-            <div class="mt-5 text-center">
+            <div class="mt-5 mb-3 text-center">
                 <p class="text-secondary fw-bold">Submitting results...</p>
                 <div class="spinner-border text-primary" role="presentation"></div>
             </div>
+
+            {% if state["reveal"] > 0 %}
+            <div id="content-reveal">
+                <div class="position-relative">
+                    {% for index in [9, 7, 5, 3, 1] %}
+                    <img src="static/im{{ state['reveal'] }}_{{ index }}.jpg" alt="Animal {{ state['reveal'] }}"
+                        style="max-width: 800px; width:100%; top: 50%; left: 50%; transform: translateX(-50%) translateY(-50%);"
+                        class="position-absolute" id="reveal-{{index}}">
+                    {% endfor %}
+                    <img src="static/im{{ state['reveal'] }}_10.jpg" alt="Animal {{ state['reveal'] }}"
+                        style="max-width: 800px; width:100%;">
+                </div>
+            </div>
+            {% endif %}
         </form>
         <script>
             setTimeout(function () {
                 document.getElementById('auto-submit-form').submit();
-            }, 1000); // 1 second delay
+            }, 5000); // 5 second delay to allow user enjoy last image reveal
         </script>
         {% endif %}
     </div>
 
+    <script>
+        // Submit animal guess
+        function submitForm(animalId) {
+            document.getElementById('animal').value = animalId;
+            document.getElementById('form').submit();
+        }
+
+        // Hide previous answer reveal, show current question
+        function nextQuestion() {
+            document.getElementById('content-reveal').remove();
+            document.getElementById('display_id-reveal').remove();
+
+            document.getElementById('content-question').classList.remove('d-none');
+            document.getElementById('display_id-question').classList.remove('d-none');
+        }
+
+        document.addEventListener('DOMContentLoaded', function () {
+            if (!document.getElementById(`content-reveal`)) return;
+
+            [1, 3, 5, 7, 9].forEach((mask, i) => {
+                setTimeout(function () {
+                    document.getElementById(`reveal-${mask}`).remove();
+                }, (i + 1) * 500);
+            });
+        });
+    </script>
 </body>
 
 </html>
