make HTML attribute quoting consistent
- Also remove some trailing spaces in files

--- a/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
+++ b/openday_scavenger/puzzles/ads_question_answer_matchup/static/index.html
@@ -23,7 +23,7 @@
 <body>
     <h1>ADS Question Answer Matchup Puzzle</h1>
 
-    <form id='form' method='POST' action='/submission'>
+    <form id="form" method="POST" action="/submission">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
         <input hidden type="text" id="answer" name="answer">
         <div class="container-lg">
