--- a/openday_scavenger/puzzles/demo/static/index.html
+++ b/openday_scavenger/puzzles/demo/static/index.html
@@ -18,7 +18,7 @@
 
     What energy in GeV does the accelerator of the Australian Synchrotron run at?
 
-    <form id='form' method='POST' action='/submission'>
+    <form id="form" method="POST" action="/submission">
         <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
         <label for="energy">Energy:</label><br>
         <input type="text" id="answer" name="answer">
