--- a/openday_scavenger/puzzles/xray_filters/static/index.html
+++ b/openday_scavenger/puzzles/xray_filters/static/index.html
@@ -113,7 +113,7 @@
         <h3 id="output">Target attenuation: 0%</h3>
 
         <div class="checkbox-container">
-            <form id='form' method='POST' action='/submission'>
+            <form id="form" method="POST" action="/submission">
                 <input hidden type="text" id="name" name="name" value="{{ puzzle }}">
                 <input hidden type="text" id="visitor" name="visitor" value="{{ visitor }}">
                 <input hidden type="text" id="answer" name="answer">
